--- a/scss/components/_typo.scss
+++ b/scss/components/_typo.scss
@@ -19,19 +19,48 @@
         font-weight: 400;
     }
 }
-
+.patch{
+    font-weight: bold;
+    background-color: $highlight-dark;
+}
+.patch-light{
+    font-size: 20px;
+    font-weight: 400;
+    background-color: $highlight;
+}
 .info{
     h4{
         font-weight:400;
     }
-    .patch{
-        font-weight: bold;
-        background-color: $highlight-dark;
-    }
+
 }
 
 .products{
     p{
         padding-right: 40px;
+    }
+}
+
+.pricing{
+    h2{
+        text-align: center;
+        font-size: 35px;
+        font-weight: 500;
+    }
+    h5{
+        font-weight: 400;
+    }
+    h6{
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        padding-bottom: 20px;
+    }
+    p{
+        font-size: 20px;
+    }
+    span{
+        font-size: 30px;
+        font-weight: bold;
     }
 }
