--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,5 +6,8 @@ $highlight: rgb(241, 255, 117);
 $footer: rgb(43, 41, 41);
 
 $primary:#ffffff;
+$secondary:rgb(241, 241, 241);
+
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+/*@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";*/
