--- a/scss/components/_typo.scss
+++ b/scss/components/_typo.scss
@@ -39,6 +39,9 @@
     p{
         padding-right: 40px;
     }
+    h4{
+        font-weight: bold;
+    }
 }
 
 .pricing{
@@ -62,5 +65,11 @@
     span{
         font-size: 30px;
         font-weight: bold;
+    }
+}
+
+.trial{
+    h3{
+        font-size: 25px;
     }
 }
