--- a/scss/sections/_pricing.scss
+++ b/scss/sections/_pricing.scss
@@ -2,6 +2,7 @@
 
 .pricing{
     margin: 0 40px;
+    padding: 80px 0 130px 0;
     .card{
         margin-top: 25px;
         box-shadow: 0 0 11px rgba(33,33,33,.2);
