--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url(http://fonts.googleapis.com/css?family=Inter);
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -29,7 +30,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #ffffff;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #f1f1f1;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -37,7 +38,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 255, 255, 255;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-secondary-rgb: 241, 241, 241;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -2026,15 +2027,15 @@ progress {
 }
 
 .table-secondary {
-  --bs-table-bg: #e2e3e5;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: #fcfcfc;
+  --bs-table-striped-bg: #efefef;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #e3e3e3;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #e9e9e9;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #cbccce;
+  border-color: #e3e3e3;
 }
 
 .table-success {
@@ -2957,33 +2958,33 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  color: #000;
+  background-color: #f3f3f3;
+  border-color: #f2f2f2;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
-  color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  color: #000;
+  background-color: #f3f3f3;
+  border-color: #f2f2f2;
+  box-shadow: 0 0 0 0.25rem rgba(205, 205, 205, 0.5);
 }
 .btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #565e64;
-  border-color: #51585e;
+  color: #000;
+  background-color: #f4f4f4;
+  border-color: #f2f2f2;
 }
 .btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(205, 205, 205, 0.5);
 }
 .btn-secondary:disabled, .btn-secondary.disabled {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 
 .btn-success {
@@ -3192,27 +3193,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
-  border-color: #6c757d;
+  color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 .btn-outline-secondary:hover {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(241, 241, 241, 0.5);
 }
 .btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #000;
+  background-color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 .btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(108, 117, 125, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(241, 241, 241, 0.5);
 }
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-  color: #6c757d;
+  color: #f1f1f1;
   background-color: transparent;
 }
 
@@ -4839,12 +4840,12 @@ textarea.form-control-lg {
 }
 
 .alert-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
-  border-color: #d3d6d8;
+  color: #606060;
+  background-color: #fcfcfc;
+  border-color: #fbfbfb;
 }
 .alert-secondary .alert-link {
-  color: #34383c;
+  color: #4d4d4d;
 }
 
 .alert-success {
@@ -5183,17 +5184,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-secondary {
-  color: #41464b;
-  background-color: #e2e3e5;
+  color: #606060;
+  background-color: #fcfcfc;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #41464b;
-  background-color: #cbccce;
+  color: #606060;
+  background-color: #e3e3e3;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #41464b;
-  border-color: #41464b;
+  background-color: #606060;
+  border-color: #606060;
 }
 
 .list-group-item-success {
@@ -6287,10 +6288,10 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-  color: #6c757d;
+  color: #f1f1f1;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #565e64;
+  color: #f4f4f4;
 }
 
 .link-success {
@@ -6730,7 +6731,7 @@ textarea.form-control-lg {
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #f1f1f1 !important;
 }
 
 .border-success {
@@ -11118,6 +11119,7 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/*@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";*/
 .form-submit-btn {
   color: #e3f735;
 }
@@ -11157,6 +11159,9 @@ textarea.form-control-lg {
 .products p {
   padding-right: 40px;
 }
+.products h4 {
+  font-weight: bold;
+}
 
 .pricing h2 {
   text-align: center;
@@ -11178,6 +11183,10 @@ textarea.form-control-lg {
 .pricing span {
   font-size: 30px;
   font-weight: bold;
+}
+
+.trial h3 {
+  font-size: 25px;
 }
 
 .main {
@@ -11258,6 +11267,7 @@ textarea.form-control-lg {
 
 .pricing {
   margin: 0 40px;
+  padding: 80px 0 130px 0;
 }
 .pricing .card {
   margin-top: 25px;
@@ -11267,6 +11277,75 @@ textarea.form-control-lg {
 .whatisit {
   padding-top: 50px;
   margin: 0 40px;
+}
+
+.trial {
+  padding: 30px 15px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .trial {
+    text-align: center;
+  }
+}
+.trial .cust .trial-container {
+  border-radius: 8px;
+  background: #f1f1f1;
+}
+.trial .cust .trial-container .trial-content {
+  padding-top: 20px;
+}
+@media (max-width: 768px) {
+  .trial .cust .trial-container .trial-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .trial .cust .trial-container .trial-form button {
+    margin-top: 10px;
+  }
+}
+
+.foot {
+  background-color: #2b2929;
+  text-align: left;
+  padding: 20px 0 60px 0;
+}
+.foot .sec-main {
+  margin-top: 100px;
+  justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .foot .sec-main {
+    margin-top: 0 !important;
+    flex-direction: column;
+  }
+  .foot .sec-main ul {
+    margin-bottom: 60px !important;
+  }
+}
+.foot .sec-main ul {
+  color: #ffffff;
+  list-style: none;
+  margin-bottom: 5px;
+  font-weight: 600;
+  font-size: 16px;
+  padding-left: 0;
+}
+.foot .sec-main a {
+  color: #989898;
+  text-decoration: none;
+}
+.foot .sec-main a:hover {
+  color: #ffffff;
+}
+
+body {
+  font-family: "Inter", sans-serif;
 }
 
 /*# sourceMappingURL=index.css.map */
