chat app under construction

--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Inter);
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11218,162 +11217,34 @@ textarea.form-control-lg {
 }
 
 .main {
-  background: #ffffff;
-}
-.main li {
-  padding: 0 0 1rem;
-  margin-right: 20px;
-  color: #0000;
-}
-.main a {
-  position: relative;
-  margin: 0 11px 0 0;
-}
-.main a span:after {
-  background: none repeat scroll 0 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: 50%;
-  position: absolute;
   background: black;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
-}
-.main a span:hover:after {
+  padding: 0;
   width: 100%;
-  left: 0;
+}
+.main .chat-content {
+  width: 25%;
+  height: 100vh;
+  background: black;
+}
+.main .chat-box {
+  width: 75%;
+  background: #2c2b2b;
+}
+.main form {
+  display: block;
+}
+.main .form-group {
+  justify-self: center;
+  align-self: center;
+  border: 1px solid white;
+  width: 20%;
+  padding: 0px 0px;
+}
+.main .form-control {
+  background-color: #464343;
+  width: 318px;
+  height: 40px;
+  border: none;
 }
 
-.intro {
-  margin-top: 10%;
-}
-
-.intro-heading {
-  margin-bottom: 8px;
-}
-
-.info {
-  margin-top: 20%;
-  margin-bottom: 10%;
-}
-
-.products {
-  height: 100%;
-  margin: 20px 0;
-}
-.products .all-products-cards {
-  min-height: 300px;
-}
-.products .row {
-  --bs-gutter-x: 3rem;
-  --bs-gutter-y: 0;
-  display: flex;
-  flex-flow: row wrap;
-}
-.products .row .all-products-cards .product-card {
-  height: 100% !important;
-  border-radius: 5px;
-  margin: 20px 0;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-.products .row a {
-  margin-bottom: 20px;
-  opacity: 0;
-}
-.products .product-card:hover {
-  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
-}
-.products .product-card:hover a {
-  opacity: 1;
-}
-
-.pricing {
-  margin: 0 40px;
-  padding: 80px 0 130px 0;
-}
-.pricing .card {
-  margin-top: 25px;
-  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
-}
-
-.whatisit {
-  padding-top: 50px;
-  margin: 0 40px;
-}
-
-.trial {
-  padding: 30px 15px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-@media (max-width: 768px) {
-  .trial {
-    text-align: center;
-  }
-}
-.trial .cust .trial-container {
-  border-radius: 8px;
-  background: #f1f1f1;
-}
-.trial .cust .trial-container .trial-content {
-  padding-top: 20px;
-}
-@media (max-width: 768px) {
-  .trial .cust .trial-container .trial-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .trial .cust .trial-container .trial-form button {
-    margin-top: 10px;
-  }
-}
-
-.foot {
-  background-color: #2b2929;
-  text-align: left;
-  padding: 20px 0 60px 0;
-}
-.foot .sec-main {
-  margin-top: 100px;
-  justify-content: space-between;
-}
-@media (max-width: 768px) {
-  .foot .sec-main {
-    margin-top: 0 !important;
-    flex-direction: column;
-  }
-  .foot .sec-main ul {
-    margin-bottom: 60px !important;
-  }
-}
-.foot .sec-main ul {
-  color: #ffffff;
-  list-style: none;
-  margin-bottom: 5px;
-  font-weight: 600;
-  font-size: 16px;
-  padding-left: 0;
-}
-.foot .sec-main a {
-  color: #989898;
-  text-decoration: none;
-}
-.foot .sec-main a:hover {
-  color: #ffffff;
-}
-
-body {
-  font-family: "Inter", sans-serif;
-}
-
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=chat.css.map */
