--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,3 +3,33 @@
 .form-submit-btn{
     color:$highlight-dark;
 }
+.main{
+
+    .main-btn{
+        float:left;
+        font-size: 12px;
+        border:none;
+        background-color: $dark-theme;
+        color: $primary;
+        margin-right: 7px;
+    }
+    .main-second-btn{
+        float:right;
+        font-size: 10px;
+        border:1px solid $primary;
+        background-color: $dark-theme;
+        color: $primary;
+    }
+    .srch{
+        float: right;
+        width: 25px;
+        height: 34px;
+        margin-top: -38px;
+        margin-right: 2px;
+        border: none;
+        background: rgb(0, 0, 0);
+        svg{
+            color:white;
+        }
+      }
+}
