--- a/scss/components/_typo.scss
+++ b/scss/components/_typo.scss
@@ -73,3 +73,22 @@
         font-size: 25px;
     }
 }
+
+.chat-content{
+    p {
+        color: rgb(255, 0, 0);
+        width: 100%; 
+        text-align: right; 
+        border-bottom: 1px solid rgb(255, 0, 0); 
+        line-height: 0.1em;
+        margin: 10px 0 20px; 
+        padding-right: 20px;
+     } 
+     
+     p span { 
+         background:rgb(0, 0, 0); 
+         border-radius: 5px;
+         border: 1px solid rgb(255, 0, 0);
+         padding:0 10px; 
+     }
+}
