--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11124,32 +11124,47 @@ textarea.form-control-lg {
   color: #e3f735;
 }
 
-.main .main-btn {
+.main .main-btn, .chat-content .main-btn {
   float: left;
   font-size: 12px;
   border: none;
-  background-color: #0000;
+  background-color: transparent;
   color: #ffffff;
   margin-right: 7px;
 }
-.main .main-second-btn {
-  float: right;
+.main .main-second-btn, .chat-content .main-second-btn {
   font-size: 10px;
   border: 1px solid #ffffff;
-  background-color: #0000;
+  background-color: transparent;
   color: #ffffff;
 }
-.main .srch {
+.main .srch, .chat-content .srch {
   float: right;
-  width: 25px;
-  height: 34px;
-  margin-top: -38px;
-  margin-right: 2px;
+  width: 22px;
+  height: 30px;
+  margin-top: -32px;
+  margin-right: 5px;
   border: none;
   background: black;
 }
-.main .srch svg {
-  color: white;
+.main .srch svg, .chat-content .srch svg {
+  color: #ffffff;
+  margin-bottom: 1px;
+}
+.main .avatar, .chat-content .avatar {
+  display: inline-block;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 100px;
+}
+.main .avatar:not(:first-child), .chat-content .avatar:not(:first-child) {
+  margin-left: -60px;
+  -webkit-mask: radial-gradient(circle 55px at 5px 50%, transparent 99%, #ffffff 100%);
+  mask: radial-gradient(circle 55px at 5px 50%, transparent 99%, #ffffff 100%);
+}
+.main .avatar img, .chat-content .avatar img {
+  width: 100%;
+  display: block;
 }
 
 .regular {
@@ -11215,6 +11230,22 @@ textarea.form-control-lg {
 
 .trial h3 {
   font-size: 25px;
+}
+
+.chat-content p {
+  color: red;
+  width: 100%;
+  text-align: right;
+  border-bottom: 1px solid red;
+  line-height: 0.1em;
+  margin: 10px 0 20px;
+  padding-right: 20px;
+}
+.chat-content p span {
+  background: black;
+  border-radius: 5px;
+  border: 1px solid red;
+  padding: 0 10px;
 }
 
 .main {
