--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,33 +3,54 @@
 .form-submit-btn{
     color:$highlight-dark;
 }
-.main{
+.main,.chat-content{
 
     .main-btn{
         float:left;
         font-size: 12px;
         border:none;
-        background-color: $dark-theme;
+        background-color: transparent;
         color: $primary;
         margin-right: 7px;
     }
     .main-second-btn{
-        float:right;
+    
         font-size: 10px;
         border:1px solid $primary;
-        background-color: $dark-theme;
+        background-color: transparent;
         color: $primary;
     }
     .srch{
         float: right;
-        width: 25px;
-        height: 34px;
-        margin-top: -38px;
-        margin-right: 2px;
+        width: 22px;
+        height: 30px;
+        margin-top: -32px;
+        margin-right: 5px;
         border: none;
-        background: rgb(0, 0, 0);
+        background: black;
         svg{
-            color:white;
+            color:$primary;
+            margin-bottom: 1px;
         }
       }
+
+      .avatar {
+        display: inline-block;
+        border-radius: 50%;
+        overflow: hidden;
+        width: 100px;
+      }
+      
+      .avatar:not(:first-child) {
+        margin-left: -60px;
+        -webkit-mask:radial-gradient(circle 55px at 5px 50%,transparent 99%,$primary 100%);
+                mask:radial-gradient(circle 55px at 5px 50%,transparent 99%,$primary 100%);
+      }
+      
+      .avatar img {
+        width: 100%;
+        display: block;
+      }
+      
 }
+
