--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -34,22 +34,18 @@
         }
       }
 
-      .avatar {
-        display: inline-block;
+      .member img {
         border-radius: 50%;
-        overflow: hidden;
-        width: 100px;
+        position: relative;
+        left: -5px;
+        margin-left: -30px;
+        z-index: 1;
       }
       
-      .avatar:not(:first-child) {
-        margin-left: -60px;
-        -webkit-mask:radial-gradient(circle 55px at 5px 50%,transparent 99%,$primary 100%);
-                mask:radial-gradient(circle 55px at 5px 50%,transparent 99%,$primary 100%);
-      }
-      
-      .avatar img {
-        width: 100%;
-        display: block;
+      .members {
+        direction: rtl;  /* This is to get the stack with left on top */
+        text-align: left;  /* Now need to explitly align left */
+        padding-left: 25px;  /* Same value as the negative margin */
       }
       
 }
