--- a/scss/components/_typo.scss
+++ b/scss/components/_typo.scss
@@ -75,6 +75,18 @@
 }
 
 .chat-content{
+    .chat-timing{
+        text-align: center;
+        border-bottom: 1px solid $footer;
+
+        span{
+            background:rgb(56, 56, 56); 
+            border-radius: 5px;
+            border: 1px solid $footer;
+            padding:0 10px; 
+
+        }
+    }
     p {
         color: rgb(255, 0, 0);
         width: 100%; 
@@ -83,12 +95,12 @@
         line-height: 0.1em;
         margin: 10px 0 20px; 
         padding-right: 20px;
-     } 
-     
-     p span { 
+
+         span { 
          background:rgb(0, 0, 0); 
          border-radius: 5px;
          border: 1px solid rgb(255, 0, 0);
          padding:0 10px; 
      }
+}
 }
